// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedModal should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="evmehgn-el-is-active e8lauwf-el-modal-bg"
      />
      <div
        class="evmehgn-el-is-active e1ucftfo-el-modal"
      >
        <div
          class="e1jrhqcv-el-modal-header"
        >
          Reapit Foundations Invitation
        </div>
        <div
          class="e8lauwf-el-modal-bg"
        >
          <p
            class="e15ggth7-el-body-text"
          >
            You have been invited to join the '
            ' organisation on Reapit Foundations.
          </p>
          <p
            class="e15ggth7-el-body-text"
          >
            Before confirming your account, please ensure your details are correct below.
          </p>
          <p
            class="e15ggth7-el-body-text"
          >
            <strong>
              Important: 
            </strong>
            If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
          </p>
          <form>
            <div
              class="ee6e7by-el-form-layout"
            >
              <div
                class="e1ksxx4v-el-input-wrap"
              >
                <div
                  class="e1979rmu-el-input-group"
                >
                  <input
                    class="e1urjlvd-el-input"
                    id="test-static-id"
                    name="name"
                  />
                  <label
                    class="e1nbkkrq-el-label"
                    for="test-static-id"
                  >
                    Name
                  </label>
                </div>
              </div>
              <div
                class="e1ksxx4v-el-input-wrap"
              >
                <div
                  class="e1979rmu-el-input-group"
                >
                  <input
                    class="e1urjlvd-el-input"
                    id="test-static-id"
                    name="jobTitle"
                  />
                  <label
                    class="e1nbkkrq-el-label"
                    for="test-static-id"
                  >
                    Job Title
                  </label>
                </div>
              </div>
            </div>
            <div
              class="eay05y4-el-button-group"
            >
              <div
                class="ej73pla-el-button-group-align-center ebqwrow-el-button-group-inner"
              >
                <button
                  class="e1vxext9-el-intent-danger eqfkc7t-el-button"
                  type="button"
                >
                  Decline
                </button>
                <button
                  class="ebee6r1-el-intent-primary eqfkc7t-el-button"
                  type="submit"
                >
                  Confirm
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="evmehgn-el-is-active e8lauwf-el-modal-bg"
    />
    <div
      class="evmehgn-el-is-active e1ucftfo-el-modal"
    >
      <div
        class="e1jrhqcv-el-modal-header"
      >
        Reapit Foundations Invitation
      </div>
      <div
        class="e8lauwf-el-modal-bg"
      >
        <p
          class="e15ggth7-el-body-text"
        >
          You have been invited to join the '
          ' organisation on Reapit Foundations.
        </p>
        <p
          class="e15ggth7-el-body-text"
        >
          Before confirming your account, please ensure your details are correct below.
        </p>
        <p
          class="e15ggth7-el-body-text"
        >
          <strong>
            Important: 
          </strong>
          If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
        </p>
        <form>
          <div
            class="ee6e7by-el-form-layout"
          >
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="name"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="jobTitle"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
          </div>
          <div
            class="eay05y4-el-button-group"
          >
            <div
              class="ej73pla-el-button-group-align-center ebqwrow-el-button-group-inner"
            >
              <button
                class="e1vxext9-el-intent-danger eqfkc7t-el-button"
                type="button"
              >
                Decline
              </button>
              <button
                class="ebee6r1-el-intent-primary eqfkc7t-el-button"
                type="submit"
              >
                Confirm
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcceptedModal should match snapshot when an invite is accepted or rejected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="evmehgn-el-is-active e8lauwf-el-modal-bg"
      />
      <div
        class="evmehgn-el-is-active e1ucftfo-el-modal"
      >
        <div
          class="e1jrhqcv-el-modal-header"
        >
          Invite Accepted
        </div>
        <div
          class="e8lauwf-el-modal-bg"
        >
          <p
            class="e15ggth7-el-body-text"
          >
            Thank you for confirming your invite to Reapit Foundations.
          </p>
          <p
            class="e15ggth7-el-body-text"
          >
            If you already had a Developer account, you can use your existing credentials to login to the Developers Portal. If not, you will shortly receive an email with instructions on setting up your login credentials.
          </p>
          <div
            class="eay05y4-el-button-group"
          >
            <div
              class="ej73pla-el-button-group-align-center ebqwrow-el-button-group-inner"
            >
              <button
                class="ebee6r1-el-intent-primary eqfkc7t-el-button"
              >
                Login
              </button>
            </div>
          </div>
          <p
            class="e15ggth7-el-body-text"
          >
            You have successfully declined the invitation to Reapit Foundations.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="evmehgn-el-is-active e8lauwf-el-modal-bg"
    />
    <div
      class="evmehgn-el-is-active e1ucftfo-el-modal"
    >
      <div
        class="e1jrhqcv-el-modal-header"
      >
        Invite Accepted
      </div>
      <div
        class="e8lauwf-el-modal-bg"
      >
        <p
          class="e15ggth7-el-body-text"
        >
          Thank you for confirming your invite to Reapit Foundations.
        </p>
        <p
          class="e15ggth7-el-body-text"
        >
          If you already had a Developer account, you can use your existing credentials to login to the Developers Portal. If not, you will shortly receive an email with instructions on setting up your login credentials.
        </p>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-center ebqwrow-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary eqfkc7t-el-button"
            >
              Login
            </button>
          </div>
        </div>
        <p
          class="e15ggth7-el-body-text"
        >
          You have successfully declined the invitation to Reapit Foundations.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
